# Home-Assistant-MQTT-Discovery

./: CMakeLists.txt  README.MD  mos.yml
include/: discovery.h  ha_discovery.hpp
src/: discovery.c  ha_discovery.cpp  lib.c
test/: test_sensor.c  test_sensor.cpp  test_tracker.c  test_tracker.cpp
